# guidectl

./: .gitignore  README.md  pyproject.toml
guidectl/: __init__.py  cli.py  client.py
tests/: test_client.py
